<resources>
    <string name="app_name">KotlinBoilerplate</string>

    <string name="LoginActivity_toolbar">Login</string>
    <string name="LoginActivity_login_button_default">Login</string>
    <string name="LoginActivity_login_button_in_progress">Logging in...</string>
    <string name="LoginActivity_login_error_dialog_title">Login Failed</string>
    <string name="LoginActivity_email_hint">Email</string>
    <string name="LoginActivity_password_hint">Password</string>

    <string name="HomeActivity_toolbar">KotlinBoilerplate</string>
    <string name="HomeActivity_sign_out">Sign out</string>
    <string name="HomeActivity_create_item_error_dialog_title">Create Item Error</string>

    <string name="CreateItemFragment_toolbar">Create Item</string>
    <string name="CreateItemFragment_title_hint">Title</string>
    <string name="CreateItemFragment_description_hint">Description</string>
    <string name="CreateItemFragment_save_button_default">Save</string>
    <string name="CreateItemFragment_save_button_in_progress">Saving...</string>
</resources>
